# models/request_models.py
@@ -1,4 +1,4 @@
-from pydantic import BaseModel, EmailStr
+from pydantic import BaseModel, EmailStr, Field
 from typing import Optional
 
 class LoanFormData(BaseModel):
@@ -11,15 +11,15 @@ class LoanFormData(BaseModel):
     tenureYears: Optional[int] = 20 
     profession: Optional[str] = None 
     location: str
-    hasCibil: Optional[str] = None
-    cibilScore: Optional[int] = None
+    hasCredit: Optional[str] = None
+    CreditScore: Optional[int] = None
     proceedScoreCheck: Optional[str]= None
     gender:str
     pin: str
     propertyName: Optional[str] = None
 
 
-class CibilRequest(BaseModel):
+class CreditRequest(BaseModel):
     panNumber: str
     mobileNumber: str
     firstName: str
@@ -33,13 +33,32 @@ class CibilRequest(BaseModel):
     tenureYears: Optional[int] = 20 
     profession: Optional[str] = None
     propertyName: Optional[str] = None
-    hasCibil: Optional[str] = None
-    cibilScore: Optional[int] = None
+    hasCredit: Optional[str] = None
+    CreditScore: Optional[int] = None
     proceedScoreCheck: Optional[str]= None
     
 
 
-class CibilOTPRequest(BaseModel):
+class CreditOTPRequest(BaseModel):
     transId: str
     otp: str
     pan: str
+
+
+
+class PANRequest(BaseModel):
+    phone_number: str
+    otp: str
+    pan_number: str
+
+class PhoneNumberRequest(BaseModel):
+    phone_number: str = Field(..., example="917759054070")
+
+class LoanInputRequest(BaseModel):
+    panNumber: str
+    CreditScore: int
+    loanAmount: int
+    tenureYears: int
+    propertyName: Optional[str] = None
+    profession: Optional[str] = None
+    propertyType: Optional[str] = None
